Revert "fix: reduce visible width, subtle curve"
This reverts commit d173a655a5ec4086fdfb91610dfb1c002f313b99.

--- a/time-disc.css
+++ b/time-disc.css
@@ -7,7 +7,7 @@
   top: 0;
   bottom: 0;
   left: 0;
-  width: 20px;
+  width: 28px;
   z-index: 90;
   pointer-events: none;
   opacity: 0.3;
